--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "scripts": {
     "watch": "npm-watch",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "postcss styles.css -o src/styles.css",
+    "build": "postcss styles.css -o src/main-styles.css",
     "dev": "concurrently \"npm run build && live-server src --port=8080\" \"npm run watch\""
   },
   "keywords": [],
