--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,18 +1,18 @@
-on: push
-name: 🚀 Deploy website on push
-jobs:
-  web-deploy:
-    name: 🎉 Deploy
-    runs-on: ubuntu-latest
-    steps:
-    - name: 🚚 Get latest code
-      uses: actions/checkout@v3
-    
-    - name: 📂 Sync files
-      uses: SamKirkland/FTP-Deploy-Action@v4.3.4
-      with:
-        server: ftp.vpdfo.org
-        username: ${{ secrets.ftp_username }}
-        password: ${{ secrets.ftp_password }}
-        local-dir: ./src/
-        server-dir: ./public_html/
+#on: push
+#name: 🚀 Deploy website on push
+#jobs:
+#  web-deploy:
+#    name: 🎉 Deploy
+#    runs-on: ubuntu-latest
+#    steps:
+#    - name: 🚚 Get latest code
+#      uses: actions/checkout@v3
+#
+#    - name: 📂 Sync files
+#      uses: SamKirkland/FTP-Deploy-Action@v4.3.4
+#      with:
+#        server: ftp.vpdfo.org
+#        username: ${{ secrets.ftp_username }}
+#        password: ${{ secrets.ftp_password }}
+#        local-dir: ./src/
+#        server-dir: ./public_html/
